--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     if (project == rootProject) {
         repositories {
             google()
-            mavenCentral()
+            jcenter()
         }
         dependencies {
             classpath 'com.android.tools.build:gradle:7.2.1'
@@ -55,7 +55,7 @@ repositories {
         url "$rootDir/../node_modules/jsc-android/dist"
     }
     google()
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -63,7 +63,7 @@ dependencies {
     // https://github.com/facebook/react-native/blob/0.61-stable/template/android/app/build.gradle#L192
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_module
-    implementation 'com.devbrackets.android:exomedia:4.3.0'	
+    implementation 'com.devbrackets.android:exomedia:4.3.0'
 }
 
 def configureReactNativePom(def pom) {
@@ -97,17 +97,18 @@ def configureReactNativePom(def pom) {
 afterEvaluate { project ->
     // some Gradle build hooks ref:
     // https://www.oreilly.com/library/view/gradle-beyond-the/9781449373801/ch03.html
-    task androidJavadoc(type: Javadoc) {
-        source = android.sourceSets.main.java.srcDirs
-        classpath += files(android.bootClasspath)
-        classpath += files(project.getConfigurations().getByName('implementation').asList())
-        include '**/*.java'
-    }
-
-    task androidJavadocJar(type: Jar, dependsOn: androidJavadoc) {
-        classifier = 'javadoc'
-        from androidJavadoc.destinationDir
-    }
+//     task androidJavadoc(type: Javadoc) {
+//         source = android.sourceSets.main.java.srcDirs
+//         classpath += files(android.bootClasspath)
+//         project.getConfigurations().getByName('implementation').setCanBeResolved(true)
+//         classpath += files(project.getConfigurations().getByName('implementation').asList())
+//         include '**/*.java'
+//     }
+//
+//     task androidJavadocJar(type: Jar, dependsOn: androidJavadoc) {
+//         classifier = 'javadoc'
+//         from androidJavadoc.destinationDir
+//     }
 
     task androidSourcesJar(type: Jar) {
         classifier = 'sources'
@@ -126,15 +127,14 @@ afterEvaluate { project ->
 
     artifacts {
         archives androidSourcesJar
-        archives androidJavadocJar
+//         archives androidJavadocJar
     }
 
-    task installArchives(type: Upload) {
-        configuration = configurations.archives
-        repositories.mavenDeployer {
-            // Deploy to react-native-event-bridge/maven, ready to publish to npm
-            repository url: "file://${projectDir}/../android/maven"
-            configureReactNativePom pom
+    publishing {
+        repositories {
+            maven {
+                url = uri("${rootProject.projectDir}/maven-repo")
+            }
         }
     }
 }
