--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,7 +55,8 @@ repositories {
         url "$rootDir/../node_modules/jsc-android/dist"
     }
     google()
-    jcenter()
+    maven { url 'https://jitpack.io' }
+    
 }
 
 dependencies {
@@ -63,7 +64,7 @@ dependencies {
     // https://github.com/facebook/react-native/blob/0.61-stable/template/android/app/build.gradle#L192
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_module
-    implementation 'com.devbrackets.android:exomedia:4.3.0'
+    implementation 'com.github.brianwernick:ExoMedia:743fa9757c'
 }
 
 def configureReactNativePom(def pom) {
